# eson

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
crates/example-evaluator/: Cargo.toml  _build.rs
crates/example-evaluator/src/: main.rs
crates/macros/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: annotation.rs  boolean.rs  comments.rs  dict.rs  expr.rs  expr_token.rs  lib.rs  list.rs  null.rs  numeric.rs  string.rs  util.rs
crates/std/: Cargo.toml
crates/std/src/: asyn.rs  lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
example-evaluator/: Cargo.toml
