[workspace]
package.version = "0.1.0"
package.repository = "https://github.com/kookyleo/eson"
members = ["crates/*"]
default-members = ["crates/example-evaluator"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.75"
reqwest = "0.11.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = 0
panic = "abort"
strip = true

[profile.releasedebug]
inherits = "release"
debug = 2
panic = "unwind"
strip = false
